<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgenceLivingRoom</string>
    
    <string name="action_settings">Paramètres</string>
    <string name="day_night">Day/Night</string>
    <string name="action_about">A propos</string>
    <string name="action_infos">Infos</string>
    
    <string name="logo_desc">Logo de l\'application</string>
    <string name="description">Application mobile de l\'agence immobilière Living Room</string>
    <string name="buttonRechercherDesc">Image pour le bouton Rechercher</string>
    <string name="titreTrouverLogement">Trouvez votre logement</string>
    
    
    <!-- Preferences -->
    <string name="notifPrefTitle">Notifications</string>
    <string name="notificationsPush">Notifications push</string>
    <string name="fullScreenPrefTitle">Notifications</string>
    <string name="fullScreenMode">Mode plein écran</string>
    
    <string name="titreReference">Titre de la référénce</string>
    
    <string name="no_result">Aucun résultat !</string>
    
    <string name="boutonValider">Valider</string>
    <string name="boutonRechercher">Rechercher</string>
	<string name="boutonModifier">Modifier</string>
	<string name="boutonAnnuler">Annuler</string>
	
	<string name="trouverUnBien">Trouver un bien</string>
	<string name="mesRecherches">Mes recherches</string>
	<string name="surLaCarte">Sur la carte</string>
	<string name="contact">Contact</string>
	<string name="accueil">Accueil</string>
	<string name="siteWeb">Site Web</string>
	<string name="infos">Infos</string>
	<string name="parametres">Paramètres</string>
	
	<string name="choixVille">Ville</string>
	<string name="promptVille">Choisir la ville</string>
	<string name="choixQuartier">Quartier</string>
	<string name="promptQuartier">Choisir le quartier</string>
	<string name="choixType">Type</string>
	<string name="promptType">Choisir le type</string>
	<string name="choixLouer">A louer</string>
	<string name="choixVendre">A vendre</string>
	<string name="choixLoyer">Prix</string>
	<string name="promptLoyer">Choisir le loyer</string>
	
	<string name="contactMailMessage">Envoyez-nous votre message en cliquant sur le lien ci-dessous.</string>
	<string name="appeler">Appeler</string>
	<string name="actionContactTelephone">Contacter par téléphone</string>
    <string name="actionContactMail">Contacter par mail</string>
    <string name="callNumber">tel:0638540923</string>
	
	<string name="infoAdresse">Bureaux de l\'agence: <a href="http://www.google.fr/maps/place/8+Rue+Ingres,+31000+Toulouse/">8 Rue Ingres, 31000 Toulouse</a></string>
	<string name="infoMail">contact@agence-livingroom.com</string>
	<string name="infoTelephone">Téléphone: 06.38.54.09.23</string>
	<string name="infoFax">Fax: 09.72.43.83.72</string>
	<string name="infoSociete">Agence LivingRoom est une marque de la société USUFREE SARL au capital de 2 000 euros,
	    Le siège social est à AUREVILLE (31320) – Le bois grand, immatriculée au Registre du Commerce et des Sociétés de TOULOUSE
	    Identifiée sous le numéro SIREN 493 889 315, titulaire de la carte G0675 délivrée par la Préfecture de Haute Garonne</string>
	    
	<string name="descriptionReferenceTitre">Description</string>
	<string name="detailsReferenceTitre">Détails</string>
	<string name="carteReferenceTitre">Sur la carte</string>
	<string name="dummy_section_text">Section %1d is just a dummy section.</string>
	
	<string name="collectionGallery">Galerie de photos</string>
	
</resources>
