<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/notifPrefTitle"
        android:key="pref_key_first_pref_settings">
        <CheckBoxPreference
            android:key="pref_key_notification_on"
            android:summary="@string/notificationsPush"
            android:title="@string/notificationsPush"
            android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="@string/fullScreenPrefTitle"
        android:key="pref_key_full_screen_settings">
        <CheckBoxPreference
            android:key="pref_key_full_screen_on"
            android:summary="@string/fullScreenMode"
            android:title="@string/fullScreenMode"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>