<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingsLayout"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificationsPush" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="Non"
            android:textOn="Oui"
            android:onClick="onToggleClicked" />

    </LinearLayout>
    
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    >
      
		    <!-- Bouton VALIDER -->
			<Button android:id="@+id/ButtonPalmaresSimulation"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/boutonValider"
				android:onClick="onValiderClicked"
				/>
			<!-- Bouton ANNULER -->
			<Button android:id="@+id/ButtonPalmaresAnnuler"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/boutonAnnuler"
				android:onClick="onAnnulerClicked"
				/>
		
		</LinearLayout>
    
    

</LinearLayout>
