<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/garonne"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yogidev.android.livingroom.HomeActivity$PlaceholderFragment"
    android:weightSum="6" >

    <!-- 1 table with 2 rows, 2 cells by row, each cell = 1 linear layout containing : 1 ImageButton + 1 Button  -->
    
    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight ="5" >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" >
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >

	            <ImageButton
	                android:id="@+id/imageButton1"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@android:color/transparent"
	                android:src="@drawable/loupe"
	                android:onClick="onFindClicked" />

	            <Button
	                android:id="@+id/button1"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="10dp"
	                android:background="@android:color/background_light"
	                android:text="@string/trouverUnBien"
	                android:onClick="onFindClicked" />
	        
	        </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >

	            <ImageButton
	                android:id="@+id/imageButton2"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@android:color/transparent"
	                android:src="@drawable/coeur" />

	            <Button
	                android:id="@+id/button2"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="10dp"
	                android:background="@android:color/background_light"
	                android:text="@string/mesRecherches" />
	        
	        </LinearLayout>
	    
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" >
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >

	            <ImageButton
	                android:id="@+id/imageButton3"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@android:color/transparent"
	                android:src="@drawable/zones" />

	            <Button
	                android:id="@+id/button3"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="10dp"
	                android:background="@android:color/background_light"
	                android:text="@string/surLaCarte" />
	        
	        </LinearLayout>
            
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:orientation="vertical" >

	            <ImageButton
	                android:id="@+id/imageButton4"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@android:color/transparent"
	                android:src="@drawable/enveloppe" />

	            <Button
	                android:id="@+id/button4"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="10dp"
	                android:background="@android:color/background_light"
	                android:text="@string/contact" />
	        
	        </LinearLayout>
	    
        </TableRow>

    </TableLayout>
    

</LinearLayout>
